[tool.poetry]
name = "sample-python-injector"
version = "0.1.0"
description = ""
authors = ["YutaSawagami <ytmovie14@gmail.com>"]
readme = "README.md"
packages = [{include = "sample_python_injector"}]

[tool.poetry.dependencies]
python = "3.10.8"
injector = "^0.20.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
